# kinect-ar-robot-navigation

./: CMakeLists.txt  README
config/: create.cfg  csh.json  sample.json
src/: CMakeLists.txt  KinectARNav.cpp  KinectARNav.h  KinectReader.cpp  KinectReader.h  Localizer.cpp  Localizer.h  Navigator.cpp  Navigator.h  Visualizer.cpp  Visualizer.h  main.cpp  main.h
world/: csh.cfg  csh.world  empty.world
